--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="https://p1.hiclipart.com/preview/774/951/730/ios-7-icons-updated-weather-weather-icon-illustration-png-clipart.jpg">
   </head>
   <body>
     <div class="card">
